wrong font fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ body {
     background-color: $c-primary-var;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: sans-serif;
     font-size: 14px;
 }
 a, li, h1, h2, p {
